| Bug #33332 | assert at the end of mysql_binlog_send | ||
|---|---|---|---|
| Submitted: | 18 Dec 2007 15:06 | Modified: | 16 Feb 2008 12:37 |
| Reporter: | Andrei Elkin | ||
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Andrei Elkin | Target Version: | 5.1+ |
| Tags: | heartbeat | ||
| Triage: | D2 (Serious) / R2 (Low) / E2 (Low) | ||
[18 Dec 2007 15:06]
Andrei Elkin
[18 Dec 2007 15:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/40137 ChangeSet@1.2804, 2007-12-18 16:10:51+02:00, aelkin@koti.dsl.inet.fi +1 -0 Bug #33332 assert at the end of mysql_binlog_send The heartbeat code did not check possible error in net_flush which kept the dump thread hanging in heartbeating loop even though the slave has disappeared. When eventaully the dump thread was killed its cleanup did not use the error path and that led to an assert. Fixed with adding the check of net_flush return value. If one happens send_heartbeat_event() returns the error which forces the dump thread to exit along the error path.
[21 Dec 2007 21:49]
Andrei Elkin
Patch was queued to mysql-5.1-telco-6.3
[21 Dec 2007 21:49]
Andrei Elkin
Patch was queued to mysql-5.1-telco-6.3
[15 Feb 2008 14:41]
Bugs System
Pushed into 6.0.5-alpha
[16 Feb 2008 12:37]
Jon Stephens
Documented bugfix in the 5.1.23-ndb-6.3.8 and 6.0.5 changelogs as follows:
The code implementing heartbeats did not check for possible
errors in some circumstances; this kept the dump thread hanging
while waiting for heartbeats loop even though the slave was no
longer connected.
